--- a/packages/bodiless-documentation/resources/index.html
+++ b/packages/bodiless-documentation/resources/index.html
@@ -60,11 +60,11 @@ limitations under the License.
       background-image: none;
     }
     .page_toc {
-      padding-top: 120px !important;;
+      padding-top: 120px !important;
     }
     @media screen and (max-width: 1300px) {
        .page_toc {
-         padding-top: 50px !important;;
+         padding-top: 50px !important;
        }
     }    
   </style>  
